# ug6

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: AudioEngine.cpp  AudioEngine.h  BroadcastSender.cpp  BroadcastSender.h  DspChain.cpp  DspChain.h  FilePlayer.cpp  FilePlayer.h  HttpServer.cpp  HttpServer.h  InstanceConfig.cpp  InstanceConfig.h  Main.cpp  Presets.cpp  Presets.h
ui/: index.html
windows/: README-WINDOWS.txt
